--- a/index.html
+++ b/index.html
@@ -1,126 +1,11 @@
-<!DOCTYPE html>
 <html>
-    <head>
-        <title>YUTING-CHU</title>
-    </head>
-    
-    <body bgcolor="#ADAD00" margin: 0px auto>
-        <img src="img/CIMG5389.JPG" alt="my">
-        <h1>自我介紹</h1>
-        <p>姓名:邱玉婷</p>
-        <p>性別:女</p>
-        <p>星座:金牛座</p>
-        <p>學系:資訊工程學系</p>
-        <p>學號:109021029</p>
-        <p>mail:yuting90520@gmail.com</p>
-        <h2>興趣</h2>
-        <p>打羽球、攝影</p>
-        <h3>109-2課表</h3>
-            <center>
-                <table border="15" cellpadding=8 cellspacing=8 style="border-collapse:collapse" bgcolor="#FFBFBF">
-                    <tr bgcolor="#FFECC9">
-                        <th></th>
-                        <th></th>
-                        <th>MON</th>
-                        <th>TUE</th>
-                        <th>WED</th>
-                        <th>THU</th>
-                        <th>FRI</th>
-                    </tr>
-                    <tr>
-                        <th bgcolor="#FFECC9">1</th>
-                        <td bgcolor="#78FFFF">08:10~09:00</td>
-                        <td>文學與生活</td>
-                        <td>全民國防教育與軍事訓練</td>
-                        <td></td>
-                        <td>程式設計與智慧應用</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <th bgcolor="#FFECC9">2</th>
-                        <td bgcolor="#78FFFF">09:10~10:00</td>
-                        <td>文學與生活</td>
-                        <td>全民國防教育與軍事訓練</td>
-                        <td></td>
-                        <td>程式設計與智慧應用</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <th bgcolor="#FFECC9">3</th>
-                        <td bgcolor="#78FFFF">10:10~11:00</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td>健康與生活</td>
-                        <td>共通英語文</td>
-                    </tr>
-                    <tr>
-                        <th bgcolor="#FFECC9">4</th>
-                        <td bgcolor="#78FFFF">11:10~12:00</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td>健康與生活</td>
-                        <td>共通英語文</td>
-                    </tr>
-                    <tr>
-                        <th bgcolor="#FFECC9">N</th>
-                        <td bgcolor="#78FFFF">12:10~1:00</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <th bgcolor="#FFECC9">5</th>
-                        <td bgcolor="#78FFFF">1:10~2:00</td>
-                        <td>歷史與文化</td>
-                        <td></td>
-                        <td>離散數學</td>
-                        <td></td>
-                        <td>進階程式設計</td>
-                    </tr>
-                    <tr>
-                        <th bgcolor="#FFECC9">6</th>
-                        <td bgcolor="#78FFFF">2:10~3:00</td>
-                        <td>歷史與文化</td>
-                        <td>共通英語文</td>
-                        <td>離散數學</td>
-                        <td>離散數學</td>
-                        <td>進階程式設計</td>
-                    </tr>
-                    <tr>
-                        <th bgcolor="#FFECC9">7</th>
-                        <td bgcolor="#78FFFF">3:10~4:00</td>
-                        <td>線性代數</td>
-                        <td>文學與電影</td>
-                        <td>學輔時間</td>
-                        <td>體育</td>
-                        <td>進階程式設計</td>
-                    </tr>
-                    <tr>
-                        <th bgcolor="#FFECC9">8</th>
-                        <td bgcolor="#78FFFF">4:10~5:00</td>
-                        <td>線性代數</td>
-                        <td>文學與電影</td>
-                        <td></td>
-                        <td>體育</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <th bgcolor="#FFECC9">9</th>
-                        <td bgcolor="#78FFFF">5:10~6:00</td>
-                        <td>線性代數</td>
-                        <td>服務與學習</td>
-                        <td>服務與學習</td>
-                        <td>服務與學習</td>
-                        <td></td>
-                    </tr>
-
-
-                </table>
-            </center>
-            
-    </body>
+<body>
+    <h1>yuting</h1>
+    <nav>
+        <a href="index.html">首頁</a> | 
+        <a href="my.html">我</a> | 
+        <a href="publication.html">著作</a> | 
+        <a href="scheudle.html">課表</a>
+    </nav>
+</body>
 </html>
